Wed Feb  5 20:56:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (to_be_skipped_id): ignore anonymous attributes.

	* pack.c (Init_pack): use anonymous ID so that associated objects
	  do not appear in the packed result.

	* parse.y (rb_make_internal_id): return an anonymous ID for
	  internal use.

Wed Feb  5 14:41:56 2014  Koichi Sasada  <ko1@atdot.net>

	* vsnprintf.c: remove duplicated def of `UNINITIALIZED_VAR()'.

Wed Feb  5 14:40:16 2014  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace_dump.c (dump_object): use STR_SHARED_P()
	  instead of removed STR_NOCAPA_P() macro.

Wed Feb  5 13:51:33 2014  Koichi Sasada  <ko1@atdot.net>

	* internal.h, vm_core.h: move LIKELY/UNLIKELY/UNINITIALIZED_VAR()
	  macros from vm_core.h to internal.h.

	* string.c: remove dependency to "vm_core.h".

	* common.mk: ditto.

Wed Feb  5 13:29:01 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_free): use FL_TEST(str, STR_SHARED) directly
	  because str is not embed.

	* string.c (str_replace): remove `FL_SET(str, STR_SHARED)' line
	  because STR_SET_SHARED() set STR_SHARED.

Wed Feb  5 13:18:08 2014  Koichi Sasada  <ko1@atdot.net>

	* internal.h: remove macros STR_NOCAPA and STR_NOCAPA_P().

	* string.c (rb_str_resize): remove `STR_SET_NOEMBED(str)' because
	  str_make_independent_expand() set NOEMBED flag.

	* string.c (rb_str_resize): remove `STR_NOCAPA_P(str)' check because
	  `str' is independent (not shared).

Wed Feb  5 12:54:25 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: refactoring, especially about string flags.

	* string.c (STR_UNSET_NOCAPA): removed.
	  Use FL_UNSET() with STR_SHARED.

	* string.c (rb_str_capacity): check STR_SHARED directly
	  because it is not a embed string.

	* string.c (rb_str_modify_expand): ditto.

	* string.c (rb_str_shared_replace): use STR_SET_SHARED().

	* string.c (str_make_independent_expand): remove STR_UNSET_NOCAPA()
	  because `str' is not shared string.
